<resources>
    <string name="app_name">AnimateMe</string>

    <string name="restore_last_action">Restore last action</string>
    <string name="undo_last_action">Undo last action</string>
    <string name="delete_frame">Delete frame</string>
    <string name="delete_all_frames">Delete all frames</string>
    <string name="create_frame">Create frame</string>
    <string name="copy_frame">Copy frame</string>
    <string name="show_frame_list">Show list of frames</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pencil">Pencil</string>
    <string name="eraser">Eraser</string>
    <string name="tools">Tools</string>
    <string name="colors">Colors</string>
    <string name="frame_name">Frame %d</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="line">Line</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
</resources>