<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup"
    android:orientation="horizontal"
    android:padding="@dimen/space">

    <ImageView
        android:id="@+id/ivRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rectangle"
        android:src="@drawable/ic_rectangle" />

    <ImageView
        android:id="@+id/ivCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space"
        android:contentDescription="@string/circle"
        android:src="@drawable/ic_circle" />

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space"
        android:contentDescription="@string/line"
        android:src="@drawable/ic_line" />
</LinearLayout>